fixes 29, Technologies bottom padding is too high (padding reduced to 90px

--- a/less/pages/technology.less
+++ b/less/pages/technology.less
@@ -4,7 +4,7 @@ section#technology {
     background: url(../img/technology_bg.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     background-size: cover;
-    padding: 109px 20px 194px;
+    padding: 90px 20px;
   }
 
   .overview {
